# treeer

./: .gitignore  CMakeLists.txt  a.out  treeer.cpp
include/: treeer.hpp
src/: combinatorics.hpp  treeer.cpp
test/: treeer.cpp
